# mini_cqrs_es

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  crates.yml
examples/: common.rs  common_game.rs  game.rs  game_snapshots.rs  hotel.rs  simple.rs  spike.rs
examples/lib/: common.rs  common_game.rs  common_hotel.rs  sqlite_store.rs
src/: aggregate.rs  command.rs  consumer.rs  cqrs.rs  dispatcher.rs  error.rs  event.rs  event_store.rs  events.rs  lib.rs  query.rs  repository.rs  snapshot.rs
src/aggregate/: manager.rs  mod.rs  snapshot.rs
src/dispatcher/: mod.rs  simple.rs  snapshot.rs
