[package]
name = "mini_cqrs"
description = "Minimal event sourcing components"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
repository = "https://github.com/andreapavoni/pcqrs"
version = "0.1.0"
license = "MIT"
keywords = ["cqrs", "event-sourcing"]
rust-version = "1.67"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple"

[[example]]
name = "game"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
