[package]
name = "mini_cqrs_es"
description = "Minimal, opinionated micro-framework to implement CQRS/ES in Rust."
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
repository = "https://github.com/andreapavoni/mini_cqrs_es"
version = "0.7.0"
license = "MIT"
keywords = ["cqrs", "event-sourcing", "cqrs-es", "ddd"]
rust-version = "1.71"
edition = "2021"
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "game"
path = "examples/game.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
anyhow = "1.0.93"
thiserror = "2.0"
