[package]
name = "mini_cqrs_es"
description = "Minimal, opinionated micro-framework to implement CQRS/ES in Rust."
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
repository = "https://github.com/andreapavoni/mini_cqrs_es"
version = "0.10.0"
license = "MIT"
keywords = ["cqrs", "event-sourcing", "cqrs-es", "ddd"]
rust-version = "1.95"
edition = "2024"
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "game"
path = "examples/game.rs"

[[example]]
name = "hotel"
path = "examples/hotel.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
